--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/web/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Lone Star General Remodeling" data-rh="true"/>
     <link rel="apple-touch-icon" href="/web/logo192.png" />
     <link rel="manifest" href="/web/manifest.json" />
     <title>LSGR</title>
