--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
+    <title>LSGR Lone Star General Remodeling (redirect)</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
