--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="Lone Star General Remodeling" data-rh="true"/>
     <link rel="apple-touch-icon" href="/web/logo192.png" />
     <link rel="manifest" href="/web/manifest.json" />
-    <title>LSGR</title>
+    <title>Lone Star General Remodeling</title>
+    <meta name="google-site-verification" content="quPFVJXA7IbXu3GmmJZOLuHJM_yqsqo8KbQYOmtHPM4" />
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
