--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K37DLXZ8VJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K37DLXZ8VJ');
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="/web/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
